--- a/template/OPS/xhtml/title_horizontal.vm
+++ b/template/OPS/xhtml/title_horizontal.vm
@@ -10,19 +10,18 @@ writing-mode:horizontal-tb;
 -epub-writing-mode:horizontal-tb;
 margin:0;
 padding:0;
-height:98%;/*for ADE*/
+height:98%;/*ADE error in 100%*/
 }
 body { margin:0; padding:0; height:98%; text-align:center; line-height: 1.5; }
-.outer {
-margin:1.5% 2% 0 2%; width:96%; height:98.5%; text-align:center;
-#if (!${kindle})
-/*border:1px solid black;*/
+.outer { margin:1.5% 2% 0 2%; width:96%; height:98.5%; text-align:center;
+#if (${title_border})
+border:1px solid black;
 #end
 }
-.upper { padding:0 5%; height:20%; text-align:center; }
-.publisher { padding-top:5%; }
-.center { padding:0 5%; height:50%; text-align:center; }
-.title, .subtitle, .orgtitle, .suborgtitle, .creator, .subcreator, .series { text-align:center; line-height: 1.25; }
+.upper { padding:25% 5% 0 5%; height:50%; text-align:center; }
+.lower { padding:0 5%; height:25%; text-align:center; }
+
+.title, .subtitle, .orgtitle, .suborgtitle, .creator, .subcreator, .series .publisher { text-align:center; line-height: 1.25; }
 .series { padding-bottom:.5em; font-size:1.25em; }
 .title { font-size:1.75em; }
 .title ruby rt { font-size:.4em; }
@@ -31,9 +30,21 @@ margin:1.5% 2% 0 2%; width:96%; height:98.5%; text-align:center;
 .subtitle { padding-top:.25em; font-size:1.6em; }
 .subtitle ruby rt { font-size:.5em; }
 .suborgtitle { padding-top:.25em; font-size:1.25em; }
-.lower { padding:0; height:25%; text-align:center; }
 .creator { padding-top:5%; font-size:1.25em; }
 .subcreator { padding-top:1em; font-size:1.25em; }
+.publisher {  }
+
+.sup {
+vertical-align: super;
+font-size: 0.66em;
+letter-spacing: -2px;
+}
+.sub {
+vertical-align: sub;
+font-size: 0.66em;
+letter-spacing: -2px;
+}
+
 </style>
 <title>${title}</title>
 </head>
@@ -41,11 +52,6 @@ margin:1.5% 2% 0 2%; width:96%; height:98.5%; text-align:center;
 <body>
 <div class="outer">
 <div class="upper">
-#if (${PUBLISHER})
-	<div class="publisher">${PUBLISHER}</div>
-#end
-</div>
-<div class="center">
 #if (${SERIES})
 	<div class="series">${SERIES}</div>
 #end
@@ -66,6 +72,10 @@ margin:1.5% 2% 0 2%; width:96%; height:98.5%; text-align:center;
 #end
 #if (${SUBCREATOR})
 	<div class="subcreator">${SUBCREATOR}</div>
+#end
+#if (${PUBLISHER})
+	<br/>
+	<div class="publisher">${PUBLISHER}</div>
 #end
 </div>
 </div>
