--- a/template/OPS/css/horizontal_middle.css
+++ b/template/OPS/css/horizontal_middle.css
@@ -50,3 +50,24 @@ vertical-align: middle;
 table.bottom td {
 vertical-align: bottom;
 }
+
+
+/* kindle左右中央 */
+div.kindle_outer {
+writing-mode: vertical-rl;
+-webkit-writing-mode: vertical-rl;
+-epub-writing-mode: vertical-rl;
+text-align: center;
+height:100%;
+}
+div.kindle_outer.bottom {
+text-align: right;
+}
+div.kindle_inner {
+display: inline-block;
+writing-mode: horizontal-tb;
+-webkit-writing-mode: horizontal-tb;
+-epub-writing-mode: horizontal-tb;
+text-align: left;
+width: 90%;
+}
