--- a/template/OPS/xhtml/xhtml_footer.vm
+++ b/template/OPS/xhtml/xhtml_footer.vm
@@ -1,5 +1,8 @@
-#if (${sectionInfo.Middle})
+#if (${sectionInfo.Middle} || ${sectionInfo.bottom})
 </td></tr></table>
+#if (${kindle})
+</div></div>
+#end
 #end
 </body>
 </html>
