--- a/template/OPS/css/vertical_middle.css
+++ b/template/OPS/css/vertical_middle.css
@@ -4,7 +4,7 @@
 /** 縦書き用 左右中央 */
 @page {
 /* 上右下左 */
-margin: 0.5em 0 0 0;
+margin: 0 0 0 0;
 width:100%;
 height:100%;
 }
@@ -24,7 +24,7 @@ height:100%;
 }
 body {
 margin: 0;
-padding: 0;
+padding: .5em 0;
 display: block;
 color: #000;
 font-size: 1em;
@@ -70,5 +70,5 @@ writing-mode: vertical-rl;
 -webkit-writing-mode: vertical-rl;
 -epub-writing-mode: vertical-rl;
 text-align: left;
-height: 90%;
+height: 99%;
 }
