--- a/template/OPS/css/kindle_image.css
+++ b/template/OPS/css/kindle_image.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/* 画像用 画面中央にするには縦書きにする必要あり */
+/* 画像用 画面中央表示のため縦書き */
 @page {
 margin: 0;
 padding: 0;
@@ -13,18 +13,18 @@ writing-mode: horizontal-tb;
 -epub-writing-mode: horizontal-tb;
 margin: 0;
 padding: 0;
-width: 100%;
-height: 100%;
+width: auto;
+height: auto;
 }
 
 body {
 margin: 0;
 padding: 0;
-width: 100%;
-height: 100%;
+width: auto;
+height: auto;
 }
 
 body .img {
-width: 100%;
-height: 100%;
+width: auto;
+height: auto;
 }
