--- a/template/OPS/toc.ncx.vm
+++ b/template/OPS/toc.ncx.vm
@@ -2,7 +2,7 @@
 <ncx xmlns="http://www.daisy.org/z3986/2005/ncx/" version="2005-1">
 <head>
 <meta name="dtb:uid" content="urn:uuid:${identifier}"/>
-<meta name="dtb:depth" content="1"/>
+<meta name="dtb:depth" content="${ncx_depth}"/>
 <meta name="dtb:totalPageCount" content="0"/>
 <meta name="dtb:maxPageNumber" content="0"/>
 </head>
@@ -25,7 +25,7 @@
 #set($idx=$idx+1)
 	<navPoint id="toc${idx}" playOrder="${idx}">
 		<navLabel>
-			<text>${chapter.ChapterName}</text>
+			<text>${chapter.NoTagChapterName}</text>
 		</navLabel>
 #if ($chapter.ChapterId)
 		<content src="xhtml/${chapter.SectionId}.xhtml#${chapter.ChapterId}"/>
