--- a/template/OPS/css/kindle_image.css
+++ b/template/OPS/css/kindle_image.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/* 画像用 画面中央表示のため縦書き */
+/* Kindle画像zip用 */
 @page {
 margin: 0;
 padding: 0;
