--- a/template/OPS/css/horizontal_middle.css
+++ b/template/OPS/css/horizontal_middle.css
@@ -31,6 +31,9 @@ vertical-align: baseline;
 width:100%;
 height:100%;
 }
+body.kindle {
+line-height: 1.5;
+}
 
 table {
 width:100%;
@@ -69,5 +72,6 @@ writing-mode: horizontal-tb;
 -webkit-writing-mode: horizontal-tb;
 -epub-writing-mode: horizontal-tb;
 text-align: left;
+line-height: 1.5;
 width: 95%;
 }
