--- a/template/OPS/xhtml/title_middle.vm
+++ b/template/OPS/xhtml/title_middle.vm
@@ -27,10 +27,13 @@
 <title>${title}</title>
 </head>
 
-<body>
+
 
 #if (${kindle})
+<body class="kindle">
 <div class="kindle_outer"><div class="kindle_inner">
+#else
+<body>
 #end
 <table class="middle"><tr><td>
 
