画像単ページ時のサイズ指定 (横画面切り替え対策)

--- a/template/OPS/xhtml/xhtml_header.vm
+++ b/template/OPS/xhtml/xhtml_header.vm
@@ -30,6 +30,14 @@
 #end
 #end
 	<title>${title}</title>
+
+#if (${sectionInfo.ImageHeight} > 0)
+<style type="text/css">
+body .img img {
+height: ${sectionInfo.ImageHeightPercent}%;
+}
+</style>
+#end
 </head>
 
 #if (${sectionInfo.ImageFitW})
