--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -10,6 +10,14 @@
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css"/>
 #end
 	<title>${title}</title>
+#if (${sectionInfo.ImageHeight} > 0)
+<style type="text/css">
+body .img img {
+height: ${sectionInfo.ImageHeightPercent}%;
+min-height: ${sectionInfo.ImageHeightPercent}%;
+}
+</style>
+#end
 </head>
 #if (${sectionInfo.ImageFitW})
 <body class="fit_w">
