確認ダイアログ調整 package.opfのメタデータ調整

--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package xmlns="http://www.idpf.org/2007/opf" unique-identifier="pub-id" xml:lang="ja" version="3.0">
-	<metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
+	<metadata xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:opf="http://www.idpf.org/2007/opf">
 #if (${titleAs})
-		<dc:title id="title" file-as="${titleAs}">${title}</dc:title>
+		<dc:title id="title" opf:file-as="${titleAs}">${title}</dc:title>
 #else
 		<dc:title id="title">${title}</dc:title>
 #end
 		<meta refines="#title" property="dcterms:title">${title}</meta>
 #if (${titleAs})
-		<meta refines="#title" property="file-as" xml:lang="ja-Hrkt-JP">${titleAs}</meta>
+		<meta refines="#title" property="file-as">${titleAs}</meta>
 #end
 #if (${creator})
 #if (${creatorAs})
-		<dc:creator id="creator" role="aut" file-as="${creatorAs}">${creator}</dc:creator>
+		<dc:creator id="creator" opf:role="aut" opf:file-as="${creatorAs}">${creator}</dc:creator>
 #else
-		<dc:creator id="creator" role="aut">${creator}</dc:creator>
+		<dc:creator id="creator" opf:role="aut">${creator}</dc:creator>
 #end
 		<meta refines="#creator" property="dcterms:creator">${creator}</meta>
 #if (${creatorAs})
-		<meta refines="#creator" property="file-as" xml:lang="ja-Hrkt-JP">${creatorAs}</meta>
+		<meta refines="#creator" property="file-as">${creatorAs}</meta>
 #end
 #end
 #if (${publisher})
